--- a/style.css
+++ b/style.css
@@ -59,3 +59,23 @@ h2 {
 p {
     font-size: 18px;
 }
+
+.person {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid black;
+    width: 300px;
+    display: inline-block;
+    border: 1px solid black;
+    background-color: rgb(157, 228, 236);
+    padding-top: 25px;
+    padding-right: 30px;
+    padding-bottom: 25px;
+    padding-left: 50px;
+    box-sizing: content-box;
+}
+.image {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+}
