--- a/style.css
+++ b/style.css
@@ -79,3 +79,18 @@ h2 {
 p {
     font-size: 18px;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
