--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 /* style.css */
-body {
+/*body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
+} */
+
+body {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f6f6f6;
+    font-family: Arial, sans-serif;
+  }
 
 .person {
     margin: 20px;
@@ -93,4 +104,24 @@ th, td {
 
 th {
     background-color: #f2f2f2;
+}
+
+.review-card {
+  background-color: white;
+  width: 90%;
+  max-width: 700px;
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+@media (min-width: 700px) {
+  .review-card {
+    display: flex;
+    align-items: center;
+  }
+
+  .review-text {
+    margin-left: 20px;
+  }
 }
