--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f6f6f6;
-    font-family: Arial, sans-serif;
+    padding: 0;
+    font-family: Roboto, sans-serif;
+    box-sizing: border-box;
   }
 
 .person {
@@ -67,12 +69,14 @@ nav a {
     font-size: 16px;
     display: inline;
     white-space: nowrap;
+    box-sizing: border-box;
 }
 
 .container {
     max-width: 960px;
     margin: 0 auto;
     padding: 10px;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -106,7 +110,116 @@ th {
     background-color: #f2f2f2;
 }
 
-.review-card {
+#testimonials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+
+}
+
+.testimonial-heading{
+    letter-spacing: 1px;
+    margin:30px 0px;
+    padding:10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.testimonial-heading h2{
+    font-size: 2.2rem;
+    font-weight: 500;
+    background-color: #202020;
+    color: #ffffff;
+    padding: 10px 20px;
+}
+
+.testimonial-heading span{
+    font-size: medium;
+    color: chocolate;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.testimonial-box-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.testimonial-box {
+    width: 500px;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 15px;
+    cursor: pointer;
+
+}
+
+.profile-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+
+}
+
+.profile-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile{
+    display: flex;
+    align-items: center;
+}
+
+.name-user{
+    display: flex;
+    flex-direction: column;
+}
+
+.name-user strong{
+    color: #3d3d3d;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px;
+
+}
+
+.name-user span{
+    color: #979797;
+    font-size: 0.8rem;
+}
+
+.reviews {
+    color: #f9d71c;
+}
+
+.box-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.client-comment p{
+    font-size: 0.9rem;
+    color: #4b4b4b;
+}
+
+
+/*  .review-card {
   background-color: white;
   width: 90%;
   max-width: 700px;
@@ -123,5 +236,5 @@ th {
 
   .review-text {
     margin-left: 20px;
-  }
-}
+  } */
+
