--- a/style.css
+++ b/style.css
@@ -5,17 +5,16 @@
     padding: 0;
 } */
 
+/* Body style changed by -----> DB */
 body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
-    height: 100vh;
     margin: 0;
     background-color: #f6f6f6;
     padding: 0;
-    font-family: Roboto, sans-serif;
-    box-sizing: border-box;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ,Georgia, Times, 'Times New Roman', serif, sans-serif;
+    
   }
 
 .person {
@@ -36,7 +35,7 @@ body {
     width: 100%;
     max-width: 200px;
     height: auto;
-}
+} 
 
 header {
     background-color: #ffffff;
@@ -146,7 +145,7 @@ th {
     text-transform: uppercase;
 }
 
-.testimonial-box-container {
+.testimonials-box-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -218,23 +217,9 @@ th {
     color: #4b4b4b;
 }
 
-
-/*  .review-card {
-  background-color: white;
-  width: 90%;
-  max-width: 700px;
-  margin: 20px;
-  padding: 20px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+.testimonial-box:hover {
+    transform: translateY(-10px);
+    transition: all ease 0.3s;
 }
 
-@media (min-width: 700px) {
-  .review-card {
-    display: flex;
-    align-items: center;
-  }
-
-  .review-text {
-    margin-left: 20px;
-  } */
 
