--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin: 0;
+   /* margin: 0; */
     background-color: #f6f6f6;
-    padding: 0;
+    /*padding: 0; */
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ,Georgia, Times, 'Times New Roman', serif, sans-serif;
     
   }
